# cli-todolist

./: .gitignore  README.md  pyproject.toml
task_manager/: database.py  models.py
